results figures and minor bug fixes

--- a/results_report.ipynb
+++ b/results_report.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test1_results = pd.DataFrame(columns=['n_steps'] + calculated_stats + ['scheduler'])\n",
+    "test1_results = pd.DataFrame(columns=['n_procs'] + calculated_stats + ['scheduler'])\n",
     "test2_results = pd.DataFrame(columns=['distribution'] + calculated_stats + ['scheduler'])\n",
     "test3_results = pd.DataFrame(columns=['max_instructions'] + calculated_stats + ['scheduler'])"
    ]
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,9 +156,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 2:\n",
+      "\t dataset/test/test1-1.csv\n",
+      "\t\t fifo\n",
+      "\t\t rr\n",
+      "\t\t mlq\n",
+      "\t\t cfs\n",
+      "\t\t ml_prio\n",
+      "\t dataset/test/test1-2.csv\n",
+      "\t\t fifo\n",
+      "\t\t rr\n",
+      "\t\t mlq\n",
+      "\t\t cfs\n",
+      "\t\t ml_prio\n",
+      "\t dataset/test/test1-3.csv\n",
+      "\t\t fifo\n",
+      "\t\t rr\n",
+      "\t\t mlq\n",
+      "\t\t cfs\n",
+      "\t\t ml_prio\n",
+      "\t dataset/test/test1-4.csv\n",
+      "\t\t fifo\n",
+      "\t\t rr\n",
+      "\t\t mlq\n",
+      "\t\t cfs\n",
+      "\t\t ml_prio\n"
+     ]
+    }
+   ],
    "source": [
     "# Test 2\n",
     "distribution = ['n', 'u', 'f', 'cs']\n",
@@ -185,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,12 +226,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 3:\n",
+      "\t dataset/test/test1-1.csv\n",
+      "\t\t fifo\n",
+      "\t\t rr\n",
+      "\t\t mlq\n",
+      "\t\t cfs\n",
+      "\t\t ml_prio\n",
+      "\t dataset/test/test1-2.csv\n",
+      "\t\t fifo\n",
+      "\t\t rr\n",
+      "\t\t mlq\n",
+      "\t\t cfs\n",
+      "\t\t ml_prio\n",
+      "\t dataset/test/test1-3.csv\n",
+      "\t\t fifo\n",
+      "\t\t rr\n",
+      "\t\t mlq\n",
+      "\t\t cfs\n",
+      "\t\t ml_prio\n",
+      "\t dataset/test/test1-4.csv\n",
+      "\t\t fifo\n",
+      "\t\t rr\n",
+      "\t\t mlq\n",
+      "\t\t cfs\n",
+      "\t\t ml_prio\n"
+     ]
+    }
+   ],
    "source": [
     "# Test 3\n",
-    "max_instructions = ['n', 'u', 'f', 'cs']\n",
+    "max_instructions = [2, 20, 200, 2000]\n",
     "\n",
     "print('Test 3:')\n",
     "for i in range(len(test1)):\n",
@@ -223,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,14 +307,49 @@
     "    'dataset/test/test1-4.csv',\n",
     "    'dataset/test/test1-5.csv'\n",
     "]\n",
-    "test1_results = pd.DataFrame(columns=['n_steps'] + calculated_stats + ['scheduler'])"
+    "test1_results = pd.DataFrame(columns=['n_procs'] + calculated_stats + ['scheduler'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 1:\n",
+      "\t dataset/test/test1-1.csv\n",
+      "\t\t fifo\n",
+      "\t\t rr\n",
+      "\t\t mlq\n",
+      "\t\t cfs\n",
+      "\t\t ml_prio\n",
+      "\t dataset/test/test1-2.csv\n",
+      "\t\t fifo\n",
+      "\t\t rr\n",
+      "\t\t mlq\n",
+      "\t\t cfs\n",
+      "\t\t ml_prio\n",
+      "\t dataset/test/test1-3.csv\n",
+      "\t\t fifo\n",
+      "\t\t rr\n",
+      "\t\t mlq\n",
+      "\t\t cfs\n",
+      "\t\t ml_prio\n",
+      "\t dataset/test/test1-4.csv\n",
+      "\t\t fifo\n",
+      "\t\t rr\n",
+      "\t\t mlq\n",
+      "\t\t cfs\n",
+      "\t\t ml_prio\n",
+      "\t dataset/test/test1-5.csv\n",
+      "\t\t fifo\n",
+      "\t\t rr\n"
+     ]
+    }
+   ],
    "source": [
     "# Test 1\n",
     "n_steps = [10,100,1000,10000,100000]\n",
@@ -283,6 +382,13 @@
    "source": [
     "test1_results.to_csv('./results/test1_results2.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
