--- a/plot_figures.ipynb
+++ b/plot_figures.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_figs('test3', ['Test 2', 'Distribution'], 'max_instructions')"
+    "plot_figs('test3', ['Test 2', 'Max Burst Time'], 'max_instructions')"
    ]
   },
   {
