corrected cutoff figure text

--- a/plot_figures.ipynb
+++ b/plot_figures.ipynb
@@ -28,7 +28,8 @@
     "        pd.pivot_table(test, values=col, index=index, columns='scheduler').plot(kind='bar')\n",
     "        plt.title(test_title[0]+': '+plot_titles[i] + ' vs. '+test_title[1])\n",
     "        plt.ylabel(plot_ylabel[i])\n",
-    "        plt.savefig('./figures/'+test_name+'/'+col+'.png')\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig('./figures/'+test_name+'/'+col+'.png', )\n",
     "        plt.close()"
    ]
   },
