--- a/results_report.ipynb
+++ b/results_report.ipynb
@@ -296,9 +296,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'calculated_stats' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 8\u001b[0m\n\u001b[1;32m      1\u001b[0m test1 \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdataset/test/test1-1.csv\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdataset/test/test1-2.csv\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdataset/test/test1-5.csv\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      7\u001b[0m ]\n\u001b[0;32m----> 8\u001b[0m test1_results \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mn_procs\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[43mcalculated_stats\u001b[49m \u001b[38;5;241m+\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscheduler\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'calculated_stats' is not defined"
+     ]
+    }
+   ],
    "source": [
     "test1 = [\n",
     "    'dataset/test/test1-1.csv',\n",
@@ -346,32 +358,33 @@
       "\t\t ml_prio\n",
       "\t dataset/test/test1-5.csv\n",
       "\t\t fifo\n",
-      "\t\t rr\n"
+      "\t\t rr\n",
+      "\t\t mlq\n"
      ]
     }
    ],
    "source": [
-    "# Test 1\n",
-    "n_steps = [10,100,1000,10000,100000]\n",
+    "# Test 1-5\n",
+    "n_steps = [100000]\n",
     "\n",
     "print('Test 1:')\n",
-    "for i in range(len(test1)):\n",
-    "    test = test1[i]\n",
-    "    print('\\t', test)\n",
-    "    for j in range(len(schedulers)):\n",
-    "        print('\\t\\t',scheduler_names[j])\n",
-    "        sched = test_scheduler(schedulers[j], test, encoder_context=encoder_context, max_priority=max_priority)\n",
-    "        test1_results.loc[0 if pd.isnull(test1_results.index.max()) else test1_results.index.max() + 1] = [\n",
-    "            n_steps[i], \n",
-    "            sched.stat_cpu_util,\n",
-    "            sched.stat_throughput,\n",
-    "            sched.stat_turnaround_time,\n",
-    "            sched.stat_response_time,\n",
-    "            sched.stat_waiting_time,\n",
-    "            sched.stat_runtime,\n",
-    "            sched.stat_mean_runtime,\n",
-    "            scheduler_names[j]\n",
-    "        ]\n"
+    "i=4\n",
+    "test = test1[i]\n",
+    "print('\\t', test)\n",
+    "for j in range(len(schedulers)):\n",
+    "    print('\\t\\t',scheduler_names[j])\n",
+    "    sched = test_scheduler(schedulers[j], test, encoder_context=encoder_context, max_priority=max_priority)\n",
+    "    test1_results.loc[0 if pd.isnull(test1_results.index.max()) else test1_results.index.max() + 1] = [\n",
+    "        n_steps[i], \n",
+    "        sched.stat_cpu_util,\n",
+    "        sched.stat_throughput,\n",
+    "        sched.stat_turnaround_time,\n",
+    "        sched.stat_response_time,\n",
+    "        sched.stat_waiting_time,\n",
+    "        sched.stat_runtime,\n",
+    "        sched.stat_mean_runtime,\n",
+    "        scheduler_names[j]\n",
+    "    ]\n"
    ]
   },
   {
